# zkp-compiler-shootout

./: BENCHMARKS.md
shootout/: Cargo.toml
shootout/miden/src/: lib.rs
shootout/risc/: Cargo.toml
shootout/risc/methods/: Cargo.toml  build.rs
shootout/risc/methods/guest/: Cargo.toml
shootout/risc/src/: lib.rs  main.rs
shootout/risc/sudoku-core/: Cargo.toml
shootout/src/: bench.rs  main.rs
shootout/sudoku-halo2/src/: lib.rs
shootout/sudoku-plonk/src/: lib.rs
shootout/zero-knowledge/src/: lib.rs
