[workspace]

[package]
name = "risc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zero-knowledge = { path = "../zero-knowledge" }
methods-fib = { path = "methods" }
risc0-zkvm = { git = "ssh://git@github.com/risc0/risczero-wip.git", branch = "flaub/commit-codegen" }
sudoku-core = { path = "sudoku-core" }

[features]
cuda = ["risc0-zkvm/cuda"]
