[package]
name = "methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkp = { git = "ssh://git@github.com/risc0/risczero-wip.git", branch = "flaub/commit-codegen", default-features = false }
risc0-zkvm-guest = { git = "ssh://git@github.com/risc0/risczero-wip.git", branch = "flaub/commit-codegen" }
sudoku-core = {path = "../../sudoku-core"}

[profile.release]
debug = 1
